--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/main.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/main.tex
@@ -3,6 +3,8 @@
 \input{../../../_assets/preambulo.tex}
 \input{../../../_assets/portada.tex}
 
+\usepackage[all]{xy}
+
 \begin{document}
     \portada[%
         titulo=Topología II,
