--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1220,8 +1220,6 @@
 
 \begin{observacion}
     Es importante tener en cuenta que en general el levantamiento de un lazo no es un lazo, sino simplemente un arco.\\
-
-    [Insertar gráfica]
 \end{observacion}
 
 \begin{lema}
@@ -1517,7 +1515,33 @@
 
         \item $\bb{S}$ no es un retracto de $\overline{\bb{D}}$ por lo visto en la proposición \ref{prop1-12}.
         
-        \item La compresión de un cuadrado también es un retracto. [Insertar gráfica]
+        \item La compresión de un cuadrado también es un retracto. 
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}[scale=0.8]
+                \shorthandoff{>}
+
+                % Ejes
+                \draw[thick] (-3,-2) -- (-3,2);
+                \draw[thick] (-5,-2) -- (-5,2);
+                \draw[thick] (-6,1) -- (-2,1);
+                \draw[thick] (-6,-1) -- (-2,-1);
+
+                \node at (-4,2.5) {$X$};
+
+
+                % Función p
+                \draw[thick, ->] (-0.5,0) -- (0.5,0);
+                \node at (0,0.5) {$r$};
+
+                % Cuadrado
+                \draw[thick] (2,-1) -- (2,1);
+                \draw[thick] (4,-1) -- (4,1);
+                \draw[thick] (2,-1) -- (4,-1);
+                \draw[thick] (4,1) -- (2,1);
+
+            \end{tikzpicture}
+        \end{figure}
     \end{enumerate}
 \end{ejemplo}
 
@@ -1533,8 +1557,16 @@
             A \overset{i}{\longrightarrow} X \overset{r}{\longrightarrow} A& \ \ \ ,r\circ i = Id_A\\
             a \longmapsto a  \longmapsto a&
         \end{align*}
+
         \begin{gather*}
-            \pi_1(A,a_0) \overset{i_*}{\longrightarrow} \pi_1(X, a_0) \overset{r_*}{\longrightarrow} \pi_1(A,a_0)\\
+            \xymatrix{
+                \pi_1(A,a_0) \ar[r]^{i_*} \ar@/_1pc/[rr]_{r_* \circ i_*} &
+                \pi_1(X,a_0) \ar[r]^{r_*} &
+                \pi_1(A,a_0)
+            }
+        \end{gather*}
+
+        \begin{gather*}
             r_* \circ i_* = (Id_a)_* = Id_{\pi_1(A,a_0)}
         \end{gather*}
             
@@ -1585,7 +1617,55 @@
         \end{gather*}
         es decir, que existe una homotopía por arcos que lleva $\alpha \ast(g\circ \beta)$ en $(f\circ \beta) \ast \alpha$.\\
 
-        [Insertar Gráfica]\\
+        \begin{figure}[H]
+            \centering
+
+            \begin{tikzpicture}
+                % Aplicación F
+                \node at (0,1.25) {$F$};
+                \draw[thick,->] (-0.5,0.75) -- (0.5,0.75);
+
+
+                % Ejes 1
+                \draw[thick] (-3,-1) -- (-3,2);
+                \draw[thick] (-4,0) -- (-1,0);
+
+                \node[draw, circle, fill=black, inner sep=0.8pt, label=below left:{$x_1$}] at (-3,0) {};
+                \node[draw, circle, fill=black, inner sep=0.8pt, label=below:{$1$}] at (-1.5,0) {};
+                \node[draw, circle, fill=black, inner sep=0.8pt, label=left:{$1$}] at (-3,1.5) {};
+                \node[draw, circle, fill=black, inner sep=0.8pt, label=above right:{$x_2$}] at (-1.5,1.5) {};
+
+                % Cierre del cuadrado
+                \draw[thick, ->] (-3,0) -- node[below right] {$b_0$}(-2,0);
+                \draw[thick, ->] (-3,1.5) -- node[above right] {$b_1$}(-2,1.5);
+
+                \draw[thick] (-2,0) -- (-1.5,0);
+                \draw[thick] (-2,1.5) -- (-1.5,1.5);
+                \draw[thick] (-1.5,0) -- (-1.5,1.5);
+
+                \draw[thick, dashed] (-3,0.75) -- (-1.5,0.75);
+                \node at (-3.5, 0.75) {$h_0$};
+                \node at (-1, 0.75) {$h_1$};
+                
+
+                % Caja
+                \draw[thick, dashed] (3,1) -- (3,2);
+                \draw[thick, dashed] (3,1) -- (7,1);
+                \draw[thick] (7,1) -- (7,2);
+                \draw[thick] (3,2) -- (7,2);
+                \draw[thick] (1,-1) -- (1,0);
+                \draw[thick] (1,-1) -- (5,-1);
+                \draw[thick] (5,-1) -- (5,0);
+                \draw[thick] (1,0) -- (5,0);
+                \draw[thick, dashed] (1,-1) -- (3,1);
+                \draw[thick] (1,0) -- (3,2);
+                \draw[thick] (5,-1) -- (7,1);
+                \draw[thick] (5,0) -- (7,2);
+
+
+
+            \end{tikzpicture}
+        \end{figure}
 
         Por hipótesis tenemos $H:X\times[0,1]\to Y$ continua tal que 
         \begin{align*}
