--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1662,7 +1662,21 @@
                 \draw[thick] (5,-1) -- (7,1);
                 \draw[thick] (5,0) -- (7,2);
 
+                % Puntos y leyenda
+                \node[draw, circle, fill=black, inner sep=0.8pt, label=left:{$0$}] at (3,1) {};
+                \node[draw, circle, fill=black, inner sep=0.8pt, label=left:{$1$}] at (3,2) {};
+                \node at (6.5,0) {$X$};
 
+                \node[draw, circle, fill=black, inner sep=0.8pt, label=below left:{$x_0$}] at (3,-0.5) {};
+                \draw[thick, ->] (3,-0.5) -- (3,0.5);
+
+                % Curva
+                \draw[blue] plot[smooth cycle, tension=1] coordinates {
+                    (3,-0.5) (3.2,-0.2) (3.6,0.1) (4.2,0.5) (4.4,0.3) (4.1,-0.2)
+                };
+                \draw[blue] plot[smooth cycle, tension=1] coordinates {
+                    (3,0.5) (3.2,0.8) (3.6,1.1) (4.2,1.5) (4.4,1.3) (4.1,0.8)
+                };
 
             \end{tikzpicture}
         \end{figure}
