--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1636,14 +1636,13 @@
                 \node[draw, circle, fill=black, inner sep=0.8pt, label=above right:{$x_2$}] at (-1.5,1.5) {};
 
                 % Cierre del cuadrado
-                \draw[thick, ->] (-3,0) -- node[below right] {$b_0$}(-2,0);
-                \draw[thick, ->] (-3,1.5) -- node[above right] {$b_1$}(-2,1.5);
+                \draw[thick, ->, blue] (-3,0) -- node[below right] {$b_0$}(-1.5,0);
+                \draw[thick, ->, red] (-3,1.5) -- node[above right] {$b_1$}(-1.5,1.5);
 
-                \draw[thick] (-2,0) -- (-1.5,0);
-                \draw[thick] (-2,1.5) -- (-1.5,1.5);
-                \draw[thick] (-1.5,0) -- (-1.5,1.5);
+                \draw[thick, ->, green!60!black] (-1.5,0) -- (-1.5,1.5);
+                \draw[thick, ->, green!60!black] (-3,0) -- (-3,1.5);
 
-                \draw[thick, dashed] (-3,0.75) -- (-1.5,0.75);
+                \draw[dashed] (-3,0.75) -- (-1.5,0.75);
                 \node at (-3.5, 0.75) {$h_0$};
                 \node at (-1, 0.75) {$h_1$};
                 
@@ -1668,13 +1667,16 @@
                 \node at (6.5,0) {$X$};
 
                 \node[draw, circle, fill=black, inner sep=0.8pt, label=below left:{$x_0$}] at (3,-0.5) {};
-                \draw[thick, ->] (3,-0.5) -- (3,0.5);
+                \draw[thick, ->, green!60!black] (3,-0.5) -- (3,0.5);
 
                 % Curva
                 \draw[blue] plot[smooth cycle, tension=1] coordinates {
                     (3,-0.5) (3.2,-0.2) (3.6,0.1) (4.2,0.5) (4.4,0.3) (4.1,-0.2)
                 };
-                \draw[blue] plot[smooth cycle, tension=1] coordinates {
+                \draw[dashed] plot[smooth cycle, tension=1] coordinates {
+                    (3,0) (3.2,0.3) (3.6,0.6) (4.2,1) (4.4,0.8) (4.1,0.1)
+                };
+                \draw[red] plot[smooth cycle, tension=1] coordinates {
                     (3,0.5) (3.2,0.8) (3.6,1.1) (4.2,1.5) (4.4,1.3) (4.1,0.8)
                 };
 
