--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1749,3 +1749,108 @@
         como queríamos probar.
     \end{proof}
 \end{lema}
+
+\begin{teo}
+    Sea $f:X\to Y$ una equivalencia homotópica, entonces
+    \begin{gather*}
+        f_*: \pi_1(X,x_0)\to \pi_1(Y,f(x_0))
+    \end{gather*}
+    es un isomorfismo.
+    \begin{proof}
+        Como $f$ es una equivalencia homotópica, existe $g:Y\to X$ que es una inversa homotópica suya. Sabemos que $g\circ f$ es homotópica a $Id_X$ entonces:
+        \begin{gather*}
+            \xymatrix{ %
+            \pi_1(X,x_0) \ar[r]^{(f_0)_*} \ar[drr]_{\overset{\scriptstyle(Id_X)_*}{\text{isom.}}} & \pi_1(Y,f(x_0)) \ar[r]^{g_*} & \pi_1(X,g(f(x_0))) \ar[d]^{\displaystyle \varphi \equiv \text{isomorfismo}}\\
+            && \pi_1(X,x_0)
+            \ar@{}[lu]|{//}
+            }
+        \end{gather*}
+        De aquí se deduce que $(f_{x_0})_*$ es inyectiva y que $g_*$ es sobreyectiva
+        \begin{gather*}
+            \xymatrix{ %
+            \pi_1(Y,f(x_0)) \ar[r]^{g_*} \ar[drrr]_{\overset{\scriptstyle(Id_Y)_*}{\text{isom.}}} & \pi_1(X,g(f(x_0))) \ar[rr]^{(f\circ g\circ f(x_0))_*} && \pi_1(Y, f(g(f(x_0)))) \ar[d]^{\displaystyle \tilde{\varphi} \equiv \text{isomorfismo}}\\
+            &&& \pi_1(X,x_0)
+            \ar@{}[lu]|{//}
+            }
+        \end{gather*}
+    \end{proof}
+\end{teo}
+
+\begin{definicion}
+    Sean $X$ un espacio topológico y $A\subset X$. Decimos que $A$ es un \textbf{retracto de deformación} de $X$ si existe una retracción $r:X\to A$ que es homotópica a la identidad en $X$.\\
+
+    Esta definición se escribe simplemente como que existe $H:X\times[0,1]\to X$ homotopía tal que 
+    \begin{gather*}
+        H(x,0) = x \ \ \ \forall x \in X\\
+        H(x,1) \in A \ \ \ \forall x \in X\\
+        H(a,0) = a \ \ \ \forall a\in A\\
+    \end{gather*}
+    Aquí la retracción es simplemente $r(x)=H(x,1)$.
+\end{definicion}
+
+\begin{ejemplo}\
+    \begin{enumerate}
+        \item $X=\bb{S}^1 \cup (\bb{R}\times\{1\})$. Veamos que $\bb{S}^1$ es retracto de deformación de $X$. Para ello buscamos $H:X\times[0,1]\to X$ y la definimos de la siguiente forma:
+        \begin{gather*}
+            H(x,t) = \left\{
+                \begin{array}{l c c }
+                    x & \text{ si } & x\in \bb{S}^1,\ t\in [0,1]\\
+                    (1-t)x+t(0,1) & \text{ si } & x\in \bb{R}\times\{1\},\ t\in [0,1]
+                \end{array}
+            \right.
+        \end{gather*}
+        Con esta definición tenemos
+        \begin{align*}
+            H(x,0) &= x \ \ \ \forall x \in X\\
+            H(x,1) &=  \left\{
+                \begin{array}{l c c }
+                    x & \text{ si } & x\in \bb{S}^1\\
+                    (0,1) & \text{ si } & x\in \bb{R}\times\{1\}
+                \end{array}
+            \right\} \Rightarrow H(x,1)\in \bb{S}^1 \ \ \ \forall x \in X\\
+            H(a,0) &= a \ \ \ \forall a\in \bb{S}^1\\
+        \end{align*}
+        y tenemos la retracción definida como se ha hecho en la definición.
+
+        \item $X=(\bb{R}\times \{-1,1\})\cup (\{-1,1\}\times \bb{R})$. Veamos que $A=([-1,1]\times \{-1,1\})\cup (\{-1,1\}\times [-1,1])$ es un retracto de deformación de $X$. Para ello definimos la homotopía como 
+        \begin{gather*}
+            H(x,t) = \left\{
+                \begin{array}{l c l l l }
+                    x & \text{ si } & x\in A\\
+                    (1-t)x+t(1,1) & \text{ si } & x=(x_1,x_2)\text{ con } &x_1\geq 1,& x_2\geq 1 \\
+                    (1-t)x+t(-1,1) & \text{ si } & x=(x_1,x_2)\text{ con } &x_1\leq -1,& x_2\geq 1 \\
+                    (1-t)x+t(-1,-1) & \text{ si } & x=(x_1,x_2)\text{ con } &x_1\leq - 1,& x_2\leq -1 \\
+                    (1-t)x+t(1,-1) & \text{ si } & x=(x_1,x_2)\text{ con } &x_1\geq 1,& x_2\leq -1 \\
+                \end{array}
+            \right.
+        \end{gather*}
+    \end{enumerate}
+\end{ejemplo}
+
+\begin{coro}
+    Sea $A$ un retracto de deformación de $X$, entonces $A$ y $X$ son del mismo tipo de homotopía. En particular la aplicación inclusión $i:A\to X$ induce un isomorfismo entre sus grupos fundamentales.
+    \begin{gather*}
+        i_*:\pi_1(A,a_0) \overset{\text{isomorf.}}{\longrightarrow} \pi_1(X,a_0)\ \ \ a_0\in A
+    \end{gather*}
+    \begin{proof}
+        Si $A$ es un retracto de deformación de $X$, entonces $\exists H$ homotopía cumpliendo
+        \begin{gather*}
+            H(x,0) = x \ \ \ \forall x \in X\\
+            H(x,1) \in A \ \ \ \forall x \in X\\
+            H(a,0) = a \ \ \ \forall a\in A\\
+        \end{gather*}
+        Si $r(x)=H(x,1)$ se tiene  que $H$ es una homotopía entre $Id_X$ y $i \circ r$ y por otro lado
+        \begin{gather*}
+            A \overset{i}{\to} X \overset{r}{\to} A\\
+            a \mapsto a \mapsto a
+        \end{gather*}
+        con $r\circ i=Id_A$ por lo que $r\circ i$ es homotópica a $Id_A$. Por el teorema anterior tenemos que $A$ y $X$ son del mismo tipo de homotopía y que $i_*$ es isomorfismo.
+    \end{proof}
+\end{coro}
+
+\begin{ejemplo}\
+    \begin{gather*}
+        \pi_1(X,x_0) \underset{\text{isom.}}{\cong} \pi_1(\bb{S}^1,x_0) \underset{\text{isom.}}{\cong} (\bb{Z},+)\\
+        [\alpha]_X \leftarrow [\alpha]_{\bb{S}^1}
+    \end{gather*}
+\end{ejemplo}
