--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1783,7 +1783,7 @@
     \begin{gather*}
         H(x,0) = x \ \ \ \forall x \in X\\
         H(x,1) \in A \ \ \ \forall x \in X\\
-        H(a,0) = a \ \ \ \forall a\in A\\
+        H(a,1) = a \ \ \ \forall a\in A\\
     \end{gather*}
     Aquí la retracción es simplemente $r(x)=H(x,1)$.
 \end{definicion}
@@ -1954,7 +1954,7 @@
         \begin{gather*}
             H(x,0) = x \ \ \ \forall x \in X\\
             H(x,1) \in A \ \ \ \forall x \in X\\
-            H(a,0) = a \ \ \ \forall a\in A\\
+            H(a,1) = a \ \ \ \forall a\in A\\
         \end{gather*}
         Si $r(x)=H(x,1)$ se tiene  que $H$ es una homotopía entre $Id_X$ y $i \circ r$ y por otro lado
         \begin{gather*}
@@ -1971,3 +1971,97 @@
         [\alpha]_X \mapsfrom [\alpha]_{\bb{S}^1}
     \end{gather*}
 \end{ejemplo}
+
+\begin{observacion}
+    Si $A$ es retracto de $X$, entonces $i_*:\pi(A,a_0)\to \pi_1(X,a_0)$ es inyectiva. Si $A$ es retracto de deformación de $X$, entonces se tiene que $i_*:\pi(A,a_0)\to \pi_1(X,a_0)$ es biyectiva.
+\end{observacion}
+
+\begin{ejemplo}\
+    \begin{enumerate}
+        \item $X=\bb{R}^2\setminus \{(0,0)\}$ y $x_0\in X$. Sabemos que $x_0$ es retracto de $X$, ya que
+        \begin{align*}
+            r:X &\to \{x_0\}\\
+            x & \mapsto x_0
+        \end{align*}
+        es continua pero $x_0$ no es retracto de deformación de $x$ ya que si lo fuese, entonces
+        \begin{align*}
+            i_*: \{0\} \cong \pi_1(\{x_0\},x_0) &\to \pi_1(\bb{R}^2\setminus\{(0,0)\}, x_0) \cong (\bb{Z}, +)
+        \end{align*}
+        sería biyectiva
+
+        \item $\bb{S}^1 \times \{0\}$ es un retracto de deformación de $\bb{S}^1 \times \bb{R}$. Si consideramos la aplicación
+        \begin{align*}
+            H: (\bb{S}^1 \times \bb{R}) \times [0,1] &\to \bb{S}^1 \times \bb{R}\\
+            ((x_1,x_2,x_3),t) & \mapsto (x_1,x_2, (1-t)x_3) = (1-t)(x_1,x_2,x_3) + t(x_1,x_2,0)
+        \end{align*}
+        Tenemos que verifica 
+        \begin{gather*}
+            H((x_1,x_2,x_3),0) = (x_1,x_2,x_3)\\
+            H((x_1,x_2,x_3),1) = (x_1,x_2,0)\in \bb{S}^1\times \{0\}\\
+            H((x_1,x_2,0),1) = a \\
+        \end{gather*}
+
+        \item Consideramos la cinta de Möbius $X$ dada por $Y=[0,1]\times [0,1]$ bajo la relación de equivalencia
+        
+        \begin{gather*}
+            (x_1,y_1)R(x_2,y_2) \sii \left\{
+                \begin{array}{c}
+                    (x_1,y_1) = (x_2,y_2)\\
+                    \vee\\ 
+                    \{x_1,x_2\} = \{0,1\} \wedge y_1+y_2=1
+                \end{array}
+            \right.
+        \end{gather*}
+
+        Definimos la ``circunferencia''
+        \begin{gather*}
+            A = [0,1]\times \left\{ \frac{1}{2} \right\} \text{ bajo la relación de equivalencia de }R
+        \end{gather*}
+        Consideramos la homotopía:
+        \begin{align*}
+            H:Y\times [0,1] &\to Y\\
+            ((x,t),t) &\mapsto (1-t)(x,y)+y\left(x, \frac{1}{2}\right)
+        \end{align*}
+        que es continua. Se deja como ejercicio ver que $H$ está bien definida, es decir, que para cualesquiera 2 elementos relacionados tienen la misma imagen (bajo $R$). De esta forma se tiene
+        \begin{gather*}
+            \pi_1(X) \underset{\text{isom.}}{\cong} \pi_1(A) \cong \pi_1(\bb{S}^1)\cong (\bb{Z},+)
+        \end{gather*}
+
+        \item Consideramos $\bb{R}^2 \setminus\{(-1,0),(1,0)\}$ [Terminar]
+        
+    \end{enumerate}
+\end{ejemplo}
+
+\begin{definicion}
+    Se dice que un espacio topológico $X$ es \textbf{contráctil} si existe un punto $x_0\in X$ tal que $x_0$ sea retracto de deformación de $X$.
+\end{definicion}
+
+\begin{coro}
+    Todo espacio topológico contráctil es simplemente conexo.
+    \begin{proof}
+        Sea $X$ el e.t y $x_0$ el punto de $X$ para el cual existe $H:X\times[0,1] \to X$ homotopía que verifica $\forall x \in X$
+        \begin{gather*}
+            H(x,0) = x\\
+            H(x,1) = x_0
+        \end{gather*}
+        En este caso tenemos que $\alpha_*(t)=H(x,t)$ es un arco que une $x$ con $x_0$ por lo que $X$ es arcoconexo.\\
+
+        Como $\{x_0\}$ es retracto de deformación de $X$ se tiene que 
+        \begin{gather*}
+            i_*:\pi_1(\{x_0\},x_0) \to \pi_1(X,x_0)
+        \end{gather*}
+        es isomorfismo por lo que $\pi_1(X,x_0)$ es trivial.
+    \end{proof}
+\end{coro}
+
+\section{El grupo fundamental de las esferas. Aplicaciones.}
+
+Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya que podríamos llevar cualquier lazo al trivial. Efectivamente la intuición no nos engaña pero tendremos que verlo de una forma más rigurosa para concluir la veracidad de esta afirmación.
+
+\begin{lema}
+    Sean $X$ un e.t. y $U,V$ dos abiertos suyos tales que $X=U\cup V$. Si $U\cap V$ es arcoconexo, entonces dado un punto $x_0\in U\cap V$ y $\alpha$ un lazo basado en $x_0$, existen $\alpha_1,\dots,\alpha_k$ una cantidad finita de lazos basados en $x_0$ tales que 
+    \begin{gather*}
+        [\alpha] = [\alpha_1]\ast \dots \ast [\alpha_k]
+    \end{gather*}
+    donde la imagen de cada $\alpha_i$ cae completamente en $U$ o bien en $V$.
+\end{lema}
